[package]
name = "manatees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.6.5", features = ["tokio"] }
futures = "0.3"
serde_json = "1.0.96"
serde = "1.0.163"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
redis = "0.23.0"
